# praktika-tg-bot-restauran

./: .dockerignore  .env  .gitignore  .gitignore.save  .gitignore.save.1  .output.log.swp  README.md  ai.py  docker-compose.yml  dockerfile  get_redis.py  main.py  pyproject.toml  requirements.txt  test-redis.py
app/: hendlers.py  keyboards.py  states.py
docs/: =3.4.0  README.md  architecture.excalidraw  dock.md  pyproject.toml  requirements.txt
food_combo_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
knowledge_base/cuisine/: asian.txt  european.txt  georgian.txt  mediterranean.txt  russian.txt
knowledge_base/dishes/: desserts.txt  mains.txt  salads.txt  soups.txt  starters.txt  vegetarian.txt
knowledge_base/meal_time/: breakfast.txt  dinner.txt  lunch.txt  snack.txt
knowledge_base/situation/: business.txt  guests.txt  holiday.txt  home.txt  romantic.txt
knowledge_base/taste/: hearty.txt  light.txt  refreshing.txt  spicy.txt  sweet.txt
knowledge_base/weather/: cold.txt  hot.txt  humid.txt  rainy.txt
knowledge_base_food/cuisine/: european.txt  russian.txt
knowledge_base_food/dishes/: desserts.txt  mains.txt
knowledge_base_food/meal_time/: breakfast.txt  dinner.txt  lunch.txt  snack.txt
knowledge_base_food/situation/: holiday.txt  home.txt
knowledge_base_food/taste/: light.txt  spicy.txt  sweet.txt
knowledge_base_food/weather/: cold.txt
knowledge_base_world_cuisine/: base.txt  dish.txt
redis/: app.py
src/bot/: ai.py  handlers.py  hendlers.py  keyboards.py  states.py
src/knowledge_base/: knowledge_base.txt
src/storage/: pyproject.toml
src/storage/utils/: log_user_action.py  logger.py  prompt.py
src/utils/: config.py  format_history_for_ai.py  get_rag.py  log_user_action.py  logger.py  prompt.py
